@@ -38,3 +38,4 @@ popup
 src
 alt
 bgcolor
+combos
