@@ -16,6 +16,7 @@ UCDetectorAction_ResultReport=Check report in: {0}
 UCDetectorIterator_JobName=Detect unnecessary code
 CleanMarkersIterator_JobName=Clean UCDetector markers
 UCDetectorIterator_MONITOR_INFO=Detect unnecessary code
+UCDetectorPreferencePageKeywords_ChangeAllCombos=Change all combos below to:
 #
 AbstractUCDetectorIterator_NothingToDetectTitle=Nothing to do
 AbstractUCDetectorIterator_NothingToDetect=Nothing to detect! \
