@@ -14,6 +14,7 @@ New features:
  - Removed method/field detection of anonymous classes. Already done by eclipse, slow
  - [ 2803618 ] Add number of references to report
  - [ 2658675 ] Want annotations, not comments, to indicate non-dead code
+-  [ 2810803 ] Change visibility options more comfortable
 
 // -----------------------------------------------------------------------------
 UCDetector 1.1.0 from 2009-04-15:
